--- a/build.yaml
+++ b/build.yaml
@@ -21,7 +21,7 @@
 include:
   - board: nice_nano_v2
     shield: corne_right nice_view_adapter nice_view
-    snippet: zmq-usb-logging
+    snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: corne_right nice_view_adapter nice_view
-    snippet: zmq-usb-logging
+    snippet: zmk-usb-logging
