--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,3 +5,6 @@
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_POINTING=y
+
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
