--- a/build.yaml
+++ b/build.yaml
@@ -25,3 +25,9 @@ include:
   - board: nice_nano_v2
     shield: corne_right nice_view_adapter nice_view
     snippet: zmk-usb-logging
+  - board: seeeduino_xiao_ble
+    shield: corne_left
+    snippet: zmk-usb-logging
+  - board: seeeduino_xiao_ble
+    shield: corne_right
+    snippet: zmk-usb-logging
