--- a/build.yaml
+++ b/build.yaml
@@ -21,7 +21,13 @@
 include:
   - board: nice_nano_v2
     shield: corne_left nice_view_adapter nice_view
-    snippet: zmk-usb-logging
+    # snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: corne_right nice_view_adapter nice_view
+    # snippet: zmk-usb-logging
+  - board: seeeduino_xiao_ble
+    shield: totem_left
+    snippet: zmk-usb-logging
+  - board: seeeduino_xiao_ble
+    shield: totem_right
     snippet: zmk-usb-logging
