--- a/build.yaml
+++ b/build.yaml
@@ -31,3 +31,8 @@ include:
   - board: seeeduino_xiao_ble
     shield: totem_right
     snippet: zmk-usb-logging
+  - board: seeeduino_xiao_ble
+    shield: totem_dongle prospector_adapter
+    snippet: zmk-usb-logging
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
