--- a/config/west.yml
+++ b/config/west.yml
@@ -6,6 +6,8 @@ manifest:
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
     - name: urob
       url-base: https://github.com/urob
+    - name: carrefinho
+      url-base: https://github.com/carrefinho
   projects:
     - name: zmk
       remote: zmkfirmware
@@ -14,5 +16,8 @@ manifest:
     - name: zmk-auto-layer
       remote: urob
       revision: v0.2
+    - name: prospector-zmk-module
+      remote: carrefinho
+      revision: main
   self:
     path: config
